--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,81 @@ header{
 }
 .produtos{
   width: 100%;
-  height: 50vh;
-  background: #F00;
+  height: auto;
+  float: left;
+  background: #FFF;
+  padding-bottom: 3vh;
+}
+.card{
+  width: 90%;
+  height: auto;
+  float: left;
+  background: #fff;
+  margin-left: 5%;
+  margin-top: 2vh;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0px 0px 5px #333;
+}
+.img-card{
+  width: 100%;
+  height: auto;
+  float: left;
+}
+.card h2{
+  width: 90%;
+  height: auto;
+  float: left;
+  /* background: rgb(255, 121, 255); */
+  margin-left: 5%;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
+  text-transform: uppercase;
+}
+.desc{
+  width: 90%;
+  height: auto;
+  float: left;
+  /* background: rgb(255, 121, 255); */
+  margin-left: 5%;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  text-align: left;
+  color: #333;
+  margin-top: 1vh;
+}
+.classificacao{
+  width: 40%;
+  height: auto;
+  float: right;
+  /* background: yellow; */
+  margin-right: 5%;
+  margin-top: 2vh;
+  text-align: center;
+}
+.preco{
+  width: 40%;
+  height: auto;
+  float: left;
+  /* background: greenyellow; */
+  margin-left: 5%;
+  margin-top: 2vh;
+  text-align: center;
+  margin-bottom: 3vh;
+}
+.off{
+  width: 15%;
+  height: auto;
+  position: absolute;
+  top: 2vh;
+  left: 0;
+  background: #000;
+  color: #fff;
+  text-align: center;
+  padding: 5px;
+  font-weight: bold;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .destaque{
   width: 100%;
