--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@ header{
   background: #FFF;
   padding-bottom: 3vh;
 }
+.link-card{
+  text-decoration: none; /*remove sublinhado*/
+  color: inherit; /* mantem cor padrão */
+}
+
 .card{
   width: 90%;
   height: auto;
@@ -64,6 +69,11 @@ header{
   margin-right: 5%;
   margin-top: 2vh;
   text-align: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+.classificacao span{
+  color: #D4AF37;
+  font-size: 1.1em;
 }
 .preco{
   width: 40%;
@@ -74,6 +84,10 @@ header{
   margin-top: 2vh;
   text-align: center;
   margin-bottom: 3vh;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1.3em;
+  color: #333;
 }
 .off{
   width: 15%;
@@ -91,10 +105,19 @@ header{
 .destaque{
   width: 100%;
   height: 50vh;
-  background: #0F0;
+  /* background: #0F0; */
+  float: left;
+}
+.destaque iframe{
+  width: 100%;
+  height: 50vh;
 }
 footer{
   width: 100%;
-  height: 20vh;
-  background: #00F;
+  height: auto;
+  background: #333;
+  float: left;
+}
+footer img{
+  
 }
